# Free-Space-Analyzer

./: CHANGELOG.md  CMakeLists.txt  READ.ME  README.md
assets/sce_sys/livearea/contents/: template.xml
include/: fs_analyzer.h  ui.h
src/: fs_analyzer.c  main.c  ui.c
